Fix View Latest News overlap

--- a/scss/_gamepage_activitynews.scss
+++ b/scss/_gamepage_activitynews.scss
@@ -23,6 +23,7 @@
 /* other margins */
 ._31ptFGGMZrSQc5BCX1e5lm._2G5B7o_YoI__u11--EFjal > div > div:nth-child(2) {
   margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 /* received new game margin */
